--- a/src/components/BootSequence/BootSequence.module.css
+++ b/src/components/BootSequence/BootSequence.module.css
@@ -99,4 +99,13 @@
   .terminal {
     font-size: 0.75rem;
   }
+
+  .logoTitle {
+    font-size: 2.4rem;
+  }
+
+  .logoGlow {
+    width: 220px;
+    height: 220px;
+  }
 }
